--- a/pages/styles.css
+++ b/pages/styles.css
@@ -1,20 +1,15 @@
 body, html, #__next, .site { 
 margin: 0;
+height: 100%;
 font-family: 'Open Sans', sans-serif;
 color: white;
+overflow-x: hidden;
 }
 
 
 .splash {
-  /* height: 54vw;
-  width: 100vw; */
   height: 100vh;
-  /* background-image: url('/static/newskyline.jpeg'); 
-  background-size: cover; 
-  background-position: center;
-  background-repeat: no-repeat; */
-  /* grid-template-rows: 4.5fr 4.5fr 1fr; */
-  
+  background: #388EDB
 }
 
 
@@ -29,11 +24,16 @@ color: white;
 
 .splash-top{
   height: 45%;
-  background-image: url('/static/newskyline.jpeg'); 
+  background: pink;
+  /* background-image: url('/static/newskyline.jpeg'); 
   background-size: cover; 
   background-position: center;
   background-repeat: no-repeat;
-  filter: grayscale(100%);
+  filter: grayscale(100%); */
+  border-radius: 0% 0% 100% 100% / 0% 0% 30% 30%;
+  width: 110%;
+  position: relative;
+  left: -5%;
 }
 
 .splash-banner{
@@ -44,52 +44,68 @@ color: white;
 .splash-footer{
   height: 10%;
   background: #012A42;
+  display: flex;
+  align-items: flex-end;
 
 }
 
 .splash-footer-icons{
   display: flex;
+  width: 75%;
+  align-items: flex-end;
   justify-content: space-around;
   color:  #388EDB;
-  height: 100%; 
-  align-items: center;
-  /* overflow: visable; */
-  font-size: 2.5em;
+  height: 125%; 
+  overflow: visible;
+  font-size: 5.5em;
   padding-left: 25%;
   padding-right: 25%;
+  padding-bottom: 2%;
 }
 
-/* .splash-footer-bar{
+.splash-footer-icon{
+  display:flex;
+  border-radius: 50%;
+  justify-content: center;
+  width: 10vw;
+  height: 30vw;
   background: #012A42;
-  height: 67%;
-} */
+}
+
+
+
+
 
 
 
 
 .report-one {
-  height: 200vh;
-  background: white;
+  height: 300vh;
+}
+
+.sticky-footer{
+  height: 50px;
+  background: #012A42;
 }
 
 .report-one-sub-one {
-  height: 33%;
-  /* height: 45vw;
-  width: 100vw; */
+  /* height: 33%; */
+  height: 45vw;
+  width: 100vw;
   background: white;
 }
 
 
 .report-one-banner {
-  height: 17%;
-  /* height: 26vw;
-  width: 100vw; */
+  /* height: 17%; */
+  height: 26vw;
+  width: 100vw;
   background: #012A42;
 }
 .report-one-sub-two {
-  height: 50%;
-  /* height: 65vw;
-  width: 100vw; */
+  /* height: 50%; */
+  height: 65vw;
+  width: 100vw;
   background: white;
 }
 
@@ -98,18 +114,18 @@ color: white;
 }
 
 .about-banner {
-  height: 50%;
-  /* height: 35vw;
-  width: 100vw; */
+  /* height: 50%; */
+  height: 35vw;
+  width: 100vw;
   padding-left: 8.5%;
   padding-right: 8.5%;
   background:  #388EDB;
 }
 
 .footer {
-  height: 50%;
-  /* height: 25vw;
-  width: 100vw; */
+  /* height: 50%; */
+  height: 25vw;
+  width: 100vw;
   background: #012A42;
   justify-content: center;
   display: flex;
