--- a/pages/styles.css
+++ b/pages/styles.css
@@ -2,13 +2,31 @@ body, html, #__next, .site {
 margin: 0;
 height: 100%;
 font-family: 'Open Sans', sans-serif;
-color: white;
-overflow-x: hidden;
-}
+background: white;
+display: flex; 
+justify-content: center;
 
+}
+/* 
+.container{
+  height: 742px;
+  width: 1400px;
+} */
+
+/* 
+ */
+
+ /* .splash-container {
+  width: 100vw;
+  height: 53vw;
+  overflow-x: hidden;
+  background: #388EDB
+} */
 
 .splash {
-  height: 100vh;
+  height: 53vw;
+  width: 100vw;
+  overflow-x: hidden;
   background: #388EDB
 }
 
@@ -25,15 +43,15 @@ overflow-x: hidden;
 .splash-top{
   height: 45%;
   background: pink;
-  /* background-image: url('/static/newskyline.jpeg'); 
+  background-image: url('/static/newskyline.jpeg'); 
   background-size: cover; 
   background-position: center;
   background-repeat: no-repeat;
-  filter: grayscale(100%); */
+  filter: grayscale(100%);
   border-radius: 0% 0% 100% 100% / 0% 0% 30% 30%;
-  width: 110%;
+  /* width: 110%; */
   position: relative;
-  left: -5%;
+  /* left: -5%; */
 }
 
 .splash-banner{
@@ -55,20 +73,20 @@ overflow-x: hidden;
   align-items: flex-end;
   justify-content: space-around;
   color:  #388EDB;
-  height: 125%; 
-  overflow: visible;
-  font-size: 5.5em;
-  padding-left: 25%;
-  padding-right: 25%;
-  padding-bottom: 2%;
+  font-size: 3em;
+  padding-left: 15%;
+  padding-right: 15%;
 }
 
 .splash-footer-icon{
   display:flex;
+  flex-direction: column;
   border-radius: 50%;
-  justify-content: center;
-  width: 10vw;
-  height: 30vw;
+  justify-content: flex-end;
+  align-items: center;
+  width: 95px;
+  height: 100px; 
+  overflow: visible;
   background: #012A42;
 }
 
@@ -87,6 +105,11 @@ overflow-x: hidden;
   height: 50px;
   background: #012A42;
 }
+/* 
+.report-half-vis {
+  width: 50%;
+  height: 100%;
+} */
 
 .report-one-sub-one {
   /* height: 33%; */
@@ -117,7 +140,7 @@ overflow-x: hidden;
   /* height: 50%; */
   height: 35vw;
   width: 100vw;
-  padding-left: 8.5%;
+  padding-left: 100px;
   padding-right: 8.5%;
   background:  #388EDB;
 }
@@ -138,3 +161,15 @@ overflow-x: hidden;
   width: auto;
 }
 
+
+.text-stuff {
+  width: 300px;
+  text-align: center;
+  font-size: 20px;
+  padding: 5px;
+}
+
+.report-Heading {
+  text-align: center;
+  font-size: 20px;
+}
