--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,11 +13,23 @@ body, html, #__next, .site {
 .splash {
   width: 100vw;
   max-width:100%;
-  height: calc(100vh - 10vh);
-  background: #388EDB;
+  height: calc(100vh - 85px);
+  background: #4992D5;
   overflow-x: hidden; 
-
 }
+
+.splash-heading {
+  width:940px;
+  padding: 20px;
+  font-size: 42px;
+  text-transform: uppercase;
+  font-family: 'Leto', sans-serif;
+  line-height: 64px;
+  letter-spacing: 1px;
+  color: white;
+  font-weight: 300;
+}
+
 
 
 .splash-top{
@@ -34,51 +46,51 @@ body, html, #__next, .site {
 }
 
 .splash-banner{
-  background: #388EDB;
+  background: #4992D5;
   height: 45%;
 }
 
 .splash-footer{
-  height: 10vh;
+  height: 85px;
   background: #0B2B40;
   display: flex;
   align-items: flex-end;
+  justify-content: center;
   transition-property: height, align-items;
   transition-duration: .2s;
   transition-timing-function: linear;
 }
 
 .scrolled-splash-footer{
-  height: 5vw;
-  align-items: center;
+  height: 75px;
 }
 
 .splash-footer-icons{
   display: flex;
   height: 6vw;
-  width: 100%;
+  width: 765px;
+  padding-left: 2%;
+  padding-right: 2%;
+
   align-items: flex-end;
   justify-content: space-between;
-  color:  #388EDB;
-  padding-left: 15%;
-  padding-right: 15%;
+  color:  #4992D5;
   font-size: 7vh;
   transition-property: font-size, align-items;
   transition-duration: .2s;
   transition-timing-function: linear;
 }
 
-@media (max-width: 1100px) {
+/* @media (max-width: 1100px) {
   .splash-footer-icons {
     padding-left: 8%;
     padding-right: 8%; 
   } 
-}
+} */
 
 .scrolled-splash-footer-icons{
-  font-size: 2.8vw;
   align-items: center;
-
+ 
 }
 
 .splash-footer-icon{
@@ -88,14 +100,43 @@ body, html, #__next, .site {
   justify-content: flex-end;
   align-items: center;
   width: 15vh;
-  min-width: 15vh;
-  height: 15vh; 
+  height: 15vh;
   overflow: visible;
   background: #0B2B40;
   transition-property: justify-content, align-items, background;
   transition-duration: .2s;
   transition-timing-function: linear;
+  cursor: pointer;
 }
+
+.icon-line{
+  border-bottom:  #0B2B40 solid 3px;
+  width: 120px;
+  transition: border-bottom .2s linear;
+  margin-bottom: 8%;
+
+
+}
+
+.splash-footer-icon:active .icon {
+  fill: #2FD89F
+  
+}
+
+.splash-footer-icon:hover .icon-line {
+  border-bottom: #2FD89F solid 3px;
+  width: 120px;
+  
+}
+
+.icon{
+  width: 38px;
+  height: 38px;
+}
+/* .icon-svg{
+  fill:magenta
+} */
+
 
 
 .scrolled-splash-footer-icon{
@@ -104,17 +145,27 @@ body, html, #__next, .site {
   background: none;
   justify-content: center;
   align-items: center;
-  height: 5vw; 
+  height: 75px; 
   overflow: hidden;
 
- 
+}
+
+.scrolled-splash-footer-icon .icon-line {
+  border-bottom: #0B2B40 solid 3px;
+  width: 0;
+}
+.scrolled-splash-footer-icon:hover .icon-line {
+  border-bottom: #0B2B40 solid 3px;
+  width: 0;
 }
 
 .icon-label {
   width: 300%;
   text-align: center;
-  font-size: 3.2vh;
-  padding: 7.5%;
+  font-size: 15px;
+  text-transform: uppercase;
+  padding-bottom: 8px;
+  padding-top: 8px;
 }
 
 .report-container {
@@ -124,17 +175,15 @@ body, html, #__next, .site {
 }
 
 .report {
-
   padding-left: 6%;
   padding-right: 6%;
-
 }
 
 
 .section-one {
-  height: 37vw;
-  padding-top: 4.8vw;
-  padding-bottom: 4.8vw;
+  height: 650px;
+  padding-top: 68px;
+  padding-bottom: 68px;
   display: flex;
   justify-content: center;
 }
@@ -158,12 +207,12 @@ body, html, #__next, .site {
 
 
 .about-banner {
-  height: 42vw;
-  background:  #388EDB;
+  height: 438px;
+  background:  #4992D5;
 }
 
 .footer {
-  height: 21vw;
+  height: 338px;
   background: #0B2B40;
 }
 
@@ -173,50 +222,41 @@ body, html, #__next, .site {
   width: auto;
 }
 
-
 .report-text{
   text-align: left;
   font-family: 'Open Sans', sans-serif;
   color: #0B2B40;
 }
 .heading{
-  font-size: 2.5vw;
+  /* font-size: 2.5vw; */
+  font-size: 42px;
   text-transform: uppercase;
   font-family: 'Leto', sans-serif;
   color: #2FD89F;
   font-weight: 300;
-  /* padding-bottom: 3.3vw; */
-  padding-bottom: 2vw;
+  padding-bottom: 38px;
 
 }
 .sub-heading{
-  /* font-size: 1.8vw;  */
-  font-size: 1.6vw;
+  font-size: 28px; 
   font-family: 'Leto', sans-serif;
-  /* padding-bottom: 1.8vw;  */
+
+
 }
 
 .spacer-line{
   border-bottom: #2FD89F solid 3px;
-  width: 3vw;
-  margin-top: 1.7vw;
+  width: 45px;
+  margin-top: 16px;
 }
 
-.paragraph-container{
-  display:grid;
-  height: 200px;
-  text-overflow: ellipsis;
-  /* white-space: nowrap; */
-  overflow: hidden; 
-}
 
 .paragraph{
-  padding-top: 1.7vw;
-  /* font-size: 1.1vw;  */
-  font-size: 1vw;
+  padding-top: 20px;
+  font-size: 16pt;
+
   font-family: 'Open Sans', sans-serif;
-  line-height: 2vw;
-  min-width: 100%;
+  line-height: 30px;
 
 
 
@@ -225,37 +265,42 @@ body, html, #__next, .site {
 }
 
 .report-columns{
-  /* display: grid;
+  display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-column-gap: 3.8vw; */
-
-  display:flex;
+  grid-column-gap: 38px; 
 
 }
 
 .text-col{
-  width: 50%;
-  padding-right: 1vw;
+  width: 100%
 }
 
 .vis-col{
-  width: 50%;
-  padding-left: 1vw;
+  width: 100%
 }
 
 .report-vis{
-  border: grey solid 4px;
+  display: flex;
+  justify-content: center;
+  /* border: grey solid 4px; */
   border-radius: 5px;
-  width: 100%;
-  height: 100%;
+  width: 435;
+  height: 375;
 }
 
 .read-more-button{
-  margin-top: 1.7vw;
-  border: grey solid 4px;
-  border-radius: 1px;
-  width: 8vw;
-  height: 2vw;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 28px;
+  border: #4992D5 solid 1px;
+  font-size: 16px;
+  border-radius: 3px;
+  width: 118px;
+  height: 30px;
+  color:#4992D5;
+  font-family: 'Leto', sans-serif;
+  letter-spacing: .6px;
 
 }
 
