--- a/styles/styles.css
+++ b/styles/styles.css
@@ -63,6 +63,7 @@ body, html, #__next, .site {
 
 .scrolled-splash-footer{
   height: 75px;
+  z-index:2;
 }
 
 .splash-footer-icons{
@@ -276,16 +277,12 @@ body, html, #__next, .site {
 }
 
 .vis-col{
-  width: 100%
+  width: 100%;
 }
 
 .report-vis{
   display: flex;
   justify-content: center;
-  /* border: grey solid 4px; */
-  border-radius: 5px;
-  width: 435;
-  height: 375;
 }
 
 .read-more-button{
