--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,7 +17,7 @@ strong {
 .splash {
   width: 100vw;
   max-width:100%;
-  height: calc(100vh - 75px);
+  height: calc(100vh - 10vh);
   overflow-x: hidden; 
 }
 
@@ -57,7 +57,7 @@ strong {
   background-position: top;
   background-repeat: no-repeat;
   display: grid;
-  grid-template-rows: 1fr 2.5fr 2.5fr;
+  grid-template-rows: 1fr 3fr 2.5fr;
   justify-items: center;
   padding-top: 5%;
 }
@@ -86,7 +86,7 @@ strong {
 } */
 
 .splash-footer{
-  height: 75px;
+  height: 10vh;
   background: #0B2B40;
   display: flex;
   align-items: flex-end;
@@ -397,4 +397,10 @@ strong {
 .about-us-description {
   line-height: 25px;
   letter-spacing: 1px;
+}
+
+
+.pieChartsVis{
+  display: grid;
+  grid-template-rows: 
 }
