--- a/styles/styles.css
+++ b/styles/styles.css
@@ -99,6 +99,7 @@ strong {
 .scrolled-splash-footer{
   height: 75px;
   z-index:2;
+  align-items: center
 }
 
 .splash-footer-icons{
@@ -135,8 +136,8 @@ strong {
   border-radius: 50%;
   justify-content: flex-end;
   align-items: center;
-  width: 15vh;
-  height: 15vh;
+  width: 13vh;
+  height: 13vh;
   overflow: visible;
   background: #0B2B40;
   transition-property: justify-content, align-items, background;
@@ -166,12 +167,10 @@ strong {
 }
 
 .icon{
-  width: 38px;
-  height: 38px;
+  width: 48px;
+  height: 48px;
 }
-/* .icon-svg{
-  fill:magenta
-} */
+
 
 
 
@@ -220,12 +219,19 @@ strong {
 
 
 
-.section {
-  height: auto;
+.section-rows {
+  height: 1100px;
   padding-top: 68px;
   padding-bottom: 68px;
-
 }
+
+
+.section-columns {
+  height: 650px;
+  padding-top: 68px;
+  padding-bottom: 68px;
+}
+
 
 
 .inner-section {
@@ -258,8 +264,11 @@ strong {
 
 
 .responsive-img { 
-  height: 100%;
-  width: auto;
+  display: block;
+  margin: auto;
+  width: 80%;
+  padding-top: 25px;
+
 }
 
 .report-text{
