--- a/styles/styles.css
+++ b/styles/styles.css
@@ -299,18 +299,22 @@ strong {
   margin-top: 16px;
 }
 
-.section-divider{
+.subsection-divider{
   display:flex;
   justify-content: center;
-
 }
 
-.section-divider-line{
+.subsection-divider-line{
   border-bottom: #355061 solid 6px;
   margin-top: 10px;
   width: 100%;
   max-width: 1200px;
+}
 
+.section-divider{
+  width: 100%;
+  height: 100px;
+  background-color: #355061;
 }
 
 
@@ -335,7 +339,7 @@ strong {
 
 .report-rows{
   display: grid;
-  grid-template-rows: 300px 600px;
+  grid-template-rows: auto 600px;
   grid-column-gap: 38px; 
 }
 .text-col{
