--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,7 +36,7 @@ strong {
 .splash-heading {
   max-width:940px;
   padding: 20px;
-  font-size: 30pt;
+  font-size: 30px;
   text-transform: uppercase;
   text-align: center;
   font-family: 'Leto', sans-serif;
@@ -49,7 +49,7 @@ strong {
 
 .splash-sub-heading {
   max-width:940px;
-  font-size: 16pt;
+  font-size: 16px;
   text-align: center;
   font-family: 'Leto', sans-serif;
   line-height: 30px;
@@ -108,6 +108,7 @@ strong {
   transition-property: font-size, align-items;
   transition-duration: .2s;
   transition-timing-function: linear;
+  padding-bottom: 11px;
 }
 
 @media (max-width: 800px) {
@@ -159,8 +160,8 @@ strong {
 
 
 
-/* 
-.icon{
+
+/* .icon{
   width: 48px;
   height: 48px;
 } */
@@ -187,7 +188,7 @@ strong {
   width: 120px;
   transition: border-bottom .2s linear;
   margin-top:  8%;
-  margin-bottom: 8%;
+  margin-bottom: 4px;
 }
 
 
@@ -331,7 +332,7 @@ strong {
   color: #0B2B40;
 }
 .heading{
-  font-size: 42pt;
+  font-size: 42px;
   text-transform: uppercase;
   font-family: 'Leto', sans-serif;
   color: #2FD89F;
@@ -355,14 +356,14 @@ strong {
 
 
 .sub-heading{
-  font-size: 28pt; 
+  font-size: 28px; 
   font-family: 'Leto', sans-serif;
 }
 
 
 @media (max-width: 500px) {
   .sub-heading{
-    font-size: 18pt;
+    font-size: 18px;
   }
 }
 
@@ -384,9 +385,9 @@ strong {
 
 .paragraph{
   padding-top: 28px;
-  font-size: 16pt;
+  font-size: 16px;
   font-family: 'Open Sans', sans-serif;
-  line-height: 30pt;
+  line-height: 30px;
 }
 
 
@@ -436,7 +437,7 @@ strong {
   font-size: 50px;
 }
 
-.percent-banner-description-block {
+.percent-banner-descripxion-block {
   text-align: center;
 }
 
@@ -467,7 +468,7 @@ strong {
   font-size: 30px;
 }
 
-.about-us-description {
+.about-us-descripxion {
   line-height: 25px;
   letter-spacing: 1px;
 }
